versioned_docs/version-2.15.0/api-reference/Introduction.mdx
---
title: o1js API Reference
keywords:
  - o1js
  - API
  - Reference
---

# o1js &nbsp; [![npm version](https://img.shields.io/npm/v/o1js.svg?style=flat)](https://www.npmjs.com/package/o1js) [![npm](https://img.shields.io/npm/dm/o1js)](https://www.npmjs.com/package/o1js) [![PRs Welcome](https://img.shields.io/badge/PRs-welcome-brightgreen.svg)](https://github.com/o1-labs/o1js/blob/main/CONTRIBUTING.md)

## o1js

o1js makes it easy for developers to build applications powered by
zero-knowledge (zk) cryptography.

Developers can use o1js to write zk circuits and prove + verify them in browser
or node environment, or create proofs to be verified by the Mina Protocol.

## Learn More

- [zkApp CLI](https://www.npmjs.com/package/zkapp-cli) is a scaffolding tool to
  start a new project with o1js

- To learn more about the language features, see the
  [o1js documentation](https://docs.o1labs.org/o1js).

- To learn how to build ZkApps on Mina, see the
  [zkApp documentation](https://docs.minaprotocol.com/zkapps).

- To meet other developers building zkApps with o1js, participate in the
  [#zkapps-developers](https://discord.com/channels/484437221055922177/915745847692636181)
  channel on Mina Protocol Discord.

- For a list of changes between versions, see the
  [CHANGELOG](https://github.com/o1-labs/o1js/blob/main/CHANGELOG.md).

- To stay up to date with o1js, see the
  [o1Labs Blog](https://www.o1labs.org/blog?topics=o1js).

## Contributing

o1js is an open source project. We appreciate all community contributions to
o1js!

See the
[Contributing guidelines](https://github.com/o1-labs/o1js/blob/main/CONTRIBUTING.md)
for ways you can contribute.

## Development Workflow

For guidance on building o1js from source and understanding the development
workflow, see
[o1js README-dev](https://github.com/o1-labs/o1js/blob/main/README-dev.md).

## Community Packages

High-quality community packages from open source developers are available for
your project.

- **o1js-elgamal** A partially homomorphic encryption library for o1js based on
  Elgamal encryption: [GitHub](https://github.com/Trivo25/o1js-elgamal) and
  [npm](https://www.npmjs.com/package/o1js-elgamal)
- **o1js-pack** A library for o1js that allows a zkApp developer to pack extra
  data into a single Field. [GitHub](https://github.com/45930/o1js-pack) and
  [npm](https://www.npmjs.com/package/o1js-pack)
- **zk-regex-o1js** A CLI tool for compiling ZK Regex circuits in o1js.
  [Github](https://github.com/Shigoto-dev19/zk-regex-o1js) and
  [npm](https://www.npmjs.com/package/zk-regex-o1js)
- **eddsa-o1js** A library for provable EdDSA and Twisted Edwards Curve
  operations. [Github](https://github.com/o1-labs-XT/eddsa-o1js) and
  [npm](https://www.npmjs.com/package/eddsa-o1js)

To include your package, see
[Creating high-quality community packages](https://github.com/o1-labs/o1js/blob/main/CONTRIBUTING.md#creating-high-quality-community-packages).

## Namespaces

| Namespace | Description |
| ------ | ------ |
| [Crypto](o1js/namespaces/Crypto/README.mdx) | - |
| [Encryption](o1js/namespaces/Encryption/README.mdx) | - |
| [Experimental](o1js/namespaces/Experimental/README.mdx) | This module exposes APIs that are unstable, in the sense that the API surface is expected to change. (Not unstable in the sense that they are less functional or tested than other parts.) |
| [Lightnet](o1js/namespaces/Lightnet/README.mdx) | - |
| [Mina](o1js/namespaces/Mina/README.mdx) | - |
| [Transaction](o1js/namespaces/Transaction/README.mdx) | - |

## Classes

| Class | Description |
| ------ | ------ |
| [AccountUpdate](classes/AccountUpdate.mdx) | An [AccountUpdate](classes/AccountUpdate.mdx) is a set of instructions for the Mina network. It includes Preconditions and a list of state updates, which need to be authorized by either a [Signature](classes/Signature.mdx) or [Proof](classes/Proof.mdx). |
| [AccountUpdateForest](classes/AccountUpdateForest.mdx) | Class which represents a forest (list of trees) of account updates, in a compressed way which allows iterating and selectively witnessing the account updates. |
| [AccountUpdateTree](classes/AccountUpdateTree.mdx) | Class which represents a tree of account updates, in a compressed way which allows iterating and selectively witnessing the account updates. |
| [BaseMerkleWitness](classes/BaseMerkleWitness.mdx) | The [BaseMerkleWitness](classes/BaseMerkleWitness.mdx) class defines a circuit-compatible base class for [Merkle Witness](https://computersciencewiki.org/index.php/Merkle_proof). |
| [Bool](classes/Bool.mdx) | A boolean value. You can use it like this: |
| [Character](classes/Character.mdx) | - |
| [~~Circuit~~](classes/Circuit.mdx) | - |
| [CircuitString](classes/CircuitString.mdx) | - |
| [DynamicProof](classes/DynamicProof.mdx) | The `DynamicProof` class enables circuits to verify proofs using in-circuit verification keys. This is opposed to the baked-in verification keys of the `Proof` class. |
| [EcdsaSignature](classes/EcdsaSignature.mdx) | - |
| [Field](classes/Field.mdx) | A [Field](classes/Field.mdx) is an element of a prime order [finite field](https://en.wikipedia.org/wiki/Finite_field). Every other provable type is built using the [Field](classes/Field.mdx) type. |
| [ForeignCurve](classes/ForeignCurve.mdx) | - |
| [ForeignCurveNotNeeded](classes/ForeignCurveNotNeeded.mdx) | @see: [ForeignCurve](classes/ForeignCurve.mdx) |
| [Group](classes/Group.mdx) | An element of a Group. |
| [Hashed](classes/Hashed.mdx) | `Hashed<T>` represents a type `T` by its hash. |
| [Int64](classes/Int64.mdx) | A 64 bit signed integer with values ranging from -18,446,744,073,709,551,615 to 18,446,744,073,709,551,615. |
| [Keypair](classes/Keypair.mdx) | - |
| [Ledger](classes/Ledger.mdx) | Represents the Mina ledger. |
| [MerkleList](classes/MerkleList.mdx) | Dynamic-length list which is represented as a single hash |
| [MerkleListIterator](classes/MerkleListIterator.mdx) | MerkleListIterator helps iterating through a Merkle list. This works similar to calling `list.pop()` or `list.push()` repeatedly, but maintaining the entire list instead of removing elements. |
| [MerkleMap](classes/MerkleMap.mdx) | - |
| [MerkleMapWitness](classes/MerkleMapWitness.mdx) | - |
| [MerkleTree](classes/MerkleTree.mdx) | A [Merkle Tree](https://en.wikipedia.org/wiki/Merkle_tree) is a binary tree in which every leaf is the cryptography hash of a piece of data, and every node is the hash of the concatenation of its two child nodes. |
| [Nullifier](classes/Nullifier.mdx) | Nullifiers are used as a public commitment to a specific anonymous account, to forbid actions like double spending, or allow a consistent identity between anonymous actions. |
| [Packed](classes/Packed.mdx) | `Packed<T>` is a "packed" representation of any type `T`. |
| [PrivateKey](classes/PrivateKey.mdx) | A signing key. You can generate one via [PrivateKey.random](classes/PrivateKey.mdx#random). |
| [Proof](classes/Proof.mdx) | - |
| [PublicKey](classes/PublicKey.mdx) | A public key, which is also an address on the Mina network. You can derive a [PublicKey](classes/PublicKey.mdx) directly from a [PrivateKey](classes/PrivateKey.mdx). |
| [RuntimeTable](classes/RuntimeTable.mdx) | # RuntimeTable |
| [Scalar](classes/Scalar.mdx) | Represents a [Scalar](classes/Scalar.mdx). |
| [ScalarField](classes/ScalarField.mdx) | ForeignField representing the scalar field of Pallas and the base field of Vesta |
| [SelfProof](classes/SelfProof.mdx) | A class representing the type of Proof produced by the [ZkProgram](functions/ZkProgram.mdx) in which it is used. |
| [Sign](classes/Sign.mdx) | - |
| [Signature](classes/Signature.mdx) | A Schnorr [Signature](classes/Signature.mdx) over the Pasta Curves. |
| [SmartContract](classes/SmartContract.mdx) | The main zkapp class. To write a zkapp, extend this class as such: |
| [TokenAccountUpdateIterator](classes/TokenAccountUpdateIterator.mdx) | Data structure to represent a forest of account updates that is being iterated over, in the context of a token manager contract. |
| [TokenContract](classes/TokenContract.mdx) | Base token contract which - implements the `Approvable` API, with the `approveBase()` method left to be defined by subclasses - implements the `Transferable` API as a wrapper around the `Approvable` API |
| [TokenSymbol](classes/TokenSymbol.mdx) | - |
| [UInt32](classes/UInt32.mdx) | A 32 bit unsigned integer with values ranging from 0 to 4,294,967,295. |
| [UInt64](classes/UInt64.mdx) | A 64 bit unsigned integer with values ranging from 0 to 18,446,744,073,709,551,615. |
| [UInt8](classes/UInt8.mdx) | A 8 bit unsigned integer with values ranging from 0 to 255. |
| [Unconstrained](classes/Unconstrained.mdx) | Container which holds an unconstrained value. This can be used to pass values between the out-of-circuit blocks in provable code. |
| [VerificationKey](classes/VerificationKey.mdx) | - |

## Interfaces

| Interface | Description |
| ------ | ------ |
| [AlmostForeignField](interfaces/AlmostForeignField.mdx) | - |
| [CanonicalForeignField](interfaces/CanonicalForeignField.mdx) | - |
| [ForeignField](interfaces/ForeignField.mdx) | - |
| [Permissions](interfaces/Permissions.mdx) | Permissions specify how specific aspects of the zkapp account are allowed to be modified. All fields are denominated by a Permission. |
| [ProofBase](interfaces/ProofBase.mdx) | - |
| [UnreducedForeignField](interfaces/UnreducedForeignField.mdx) | - |

## Type Aliases

| Type Alias | Description |
| ------ | ------ |
| [Account](type-aliases/Account.mdx) | - |
| [Bool](type-aliases/Bool.mdx) | A boolean value. You can create it like this: |
| [BoolVar](type-aliases/BoolVar.mdx) | - |
| [Bytes](type-aliases/Bytes.mdx) | A provable type representing an array of bytes. |
| [Cache](type-aliases/Cache.mdx) | Interface for storing and retrieving values, for caching. `read()` and `write()` can just throw errors on failure. |
| [CacheHeader](type-aliases/CacheHeader.mdx) | A header that is passed to the caching layer, to support rich caching strategies. |
| [ConstantField](type-aliases/ConstantField.mdx) | - |
| [DeployArgs](type-aliases/DeployArgs.mdx) | - |
| [DepthOptions](type-aliases/DepthOptions.mdx) | Options for querying transaction depth. |
| [DynamicArray](type-aliases/DynamicArray.mdx) | Dynamic-length array type that has a - constant maximum capacity, but - dynamic actual length |
| [Empty](type-aliases/Empty.mdx) | - |
| [FeatureFlags](type-aliases/FeatureFlags.mdx) | Feature flags indicate what custom gates are used in a proof of circuit. Side loading, for example, requires a set of feature flags in advance (at compile time) in order to verify and side load proofs. If the side loaded proofs and verification keys do not match the specified feature flag configurations, the verification will fail. Flags specified as `undefined` are considered as `maybe` by Pickles. This means, proofs can be sided loaded that can, but don't have to, use a specific custom gate. _Note:_ `Maybe` feature flags incur a proving overhead. |
| [Field](type-aliases/Field.mdx) | A [Field](variables/Field.mdx) is an element of a prime order [finite field](https://en.wikipedia.org/wiki/Finite_field). Every other provable type is built using the [Field](variables/Field.mdx) type. |
| [FlexibleBytes](type-aliases/FlexibleBytes.mdx) | - |
| [FlexiblePoint](type-aliases/FlexiblePoint.mdx) | - |
| [FlexibleProvable](type-aliases/FlexibleProvable.mdx) | - |
| [FlexibleProvablePure](type-aliases/FlexibleProvablePure.mdx) | - |
| [Group](type-aliases/Group.mdx) | An element of a Group. |
| [IncludedTransaction](type-aliases/IncludedTransaction.mdx) | Represents a transaction that has been successfully included in a block. |
| [IndexedMerkleMap](type-aliases/IndexedMerkleMap.mdx) | - |
| [InferProvable](type-aliases/InferProvable.mdx) | - |
| [JsonProof](type-aliases/JsonProof.mdx) | Serializable representation of a Pickles proof, useful for caching compiled proofs. |
| [MemoizationContext](type-aliases/MemoizationContext.mdx) | - |
| [MerkleListBase](type-aliases/MerkleListBase.mdx) | Common base type for [MerkleList](classes/MerkleList.mdx) and [MerkleListIterator](classes/MerkleListIterator.mdx) |
| [MerkleListIteratorBase](type-aliases/MerkleListIteratorBase.mdx) | - |
| [Option](type-aliases/Option.mdx) | Define an optional version of a provable type. |
| [PendingTransaction](type-aliases/PendingTransaction.mdx) | Represents a transaction that has been submitted to the blockchain but has not yet reached a final state. The [PendingTransaction](type-aliases/PendingTransaction.mdx) type extends certain functionalities from the base [Transaction](type-aliases/Transaction.mdx) type, adding methods to monitor the transaction's progress towards being finalized (either included in a block or rejected). |
| [PendingTransactionPromise](type-aliases/PendingTransactionPromise.mdx) | A `Promise<PendingTransaction>` with an additional `wait` method, which calls into the inner `TransactionStatus`'s `wait` method upon its resolution. |
| [Provable](type-aliases/Provable.mdx) | `Provable<T>` is the general interface for provable types in o1js. |
| [Provable](type-aliases/Provable-1.mdx) | `Provable<T>` is the general interface for provable types in o1js. |
| [ProvableExtended](type-aliases/ProvableExtended.mdx) | - |
| [ProvableHashable](type-aliases/ProvableHashable.mdx) | - |
| [ProvableHashable](type-aliases/ProvableHashable-1.mdx) | - |
| [ProvablePure](type-aliases/ProvablePure.mdx) | `ProvablePure<T>` is a special kind of [Provable](type-aliases/Provable-1.mdx) interface, where the "auxiliary" (non-provable) data is empty. This means the type consists only of field elements, in that sense it is "pure". Any instance of `ProvablePure<T>` is also an instance of `Provable<T>` where the "auxiliary" data is empty. |
| [ProvablePureExtended](type-aliases/ProvablePureExtended.mdx) | - |
| [ProvableType](type-aliases/ProvableType.mdx) | - |
| [ProvableTypePure](type-aliases/ProvableTypePure.mdx) | - |
| [ProvableWithEmpty](type-aliases/ProvableWithEmpty.mdx) | - |
| [Reducer](type-aliases/Reducer.mdx) | - |
| [RejectedTransaction](type-aliases/RejectedTransaction.mdx) | Represents a transaction that has been rejected and not included in a blockchain block. |
| [ScalarConst](type-aliases/ScalarConst.mdx) | - |
| [State](type-aliases/State.mdx) | Gettable and settable state that can be checked for equality. |
| [Struct](type-aliases/Struct.mdx) | `Struct` lets you declare composite types for use in o1js circuits. |
| [ToProvable](type-aliases/ToProvable.mdx) | - |
| [Transaction](type-aliases/Transaction.mdx) | Defines the structure and operations associated with a transaction. This type encompasses methods for serializing the transaction, signing it, generating proofs, and submitting it to the network. |
| [TransactionDepthInfo](type-aliases/TransactionDepthInfo.mdx) | Information about a transaction's depth (confirmation count) in the blockchain. Depth represents how many blocks have been built on top of the block containing the transaction. |
| [TransactionPromise](type-aliases/TransactionPromise.mdx) | A `Promise<Transaction>` with some additional methods for making chained method calls into the pending value upon its resolution. |
| [TransactionStatus](type-aliases/TransactionStatus.mdx) | INCLUDED: A transaction that is on the longest chain |
| [TupleN](type-aliases/TupleN.mdx) | tuple type that has the length as generic parameter |
| [Undefined](type-aliases/Undefined.mdx) | - |
| [VarField](type-aliases/VarField.mdx) | - |
| [Void](type-aliases/Void.mdx) | - |
| [WithHash](type-aliases/WithHash.mdx) | - |
| [WithProvable](type-aliases/WithProvable.mdx) | - |
| [Witness](type-aliases/Witness.mdx) | - |
| [ZkappPublicInput](type-aliases/ZkappPublicInput.mdx) | The public input for zkApps consists of certain hashes of the proving account update (and its child updates) which is constructed during method execution. |
| [ZkProgram](type-aliases/ZkProgram.mdx) | Wraps config + provable code into a program capable of producing [Proof](classes/Proof.mdx)s. |

## Variables

| Variable | Description |
| ------ | ------ |
| [Account](variables/Account.mdx) | - |
| [Bool](variables/Bool.mdx) | A boolean value. You can create it like this: |
| [Cache](variables/Cache.mdx) | - |
| [Crypto](variables/Crypto.mdx) | - |
| [Empty](variables/Empty.mdx) | - |
| [emptyHash](variables/emptyHash.mdx) | - |
| [FeatureFlags](variables/FeatureFlags.mdx) | Feature flags indicate what custom gates are used in a proof of circuit. Side loading, for example, requires a set of feature flags in advance (at compile time) in order to verify and side load proofs. If the side loaded proofs and verification keys do not match the specified feature flag configurations, the verification will fail. Flags specified as `undefined` are considered as `maybe` by Pickles. This means, proofs can be sided loaded that can, but don't have to, use a specific custom gate. _Note:_ `Maybe` feature flags incur a proving overhead. |
| [Field](variables/Field.mdx) | A [Field](variables/Field.mdx) is an element of a prime order [finite field](https://en.wikipedia.org/wiki/Finite_field). Every other provable type is built using the [Field](variables/Field.mdx) type. |
| [Gadgets](variables/Gadgets.mdx) | - |
| [Group](variables/Group.mdx) | An element of a Group. |
| [Hash](variables/Hash.mdx) | A collection of hash functions which can be used in provable code. |
| [IndexedMerkleMap](variables/IndexedMerkleMap.mdx) | - |
| [Keccak](variables/Keccak.mdx) | - |
| [memoizationContext](variables/memoizationContext.mdx) | - |
| [Permissions](variables/Permissions.mdx) | - |
| [Poseidon](variables/Poseidon.mdx) | Applies the full Poseidon permutation to the provided state. |
| [provable](variables/provable.mdx) | - |
| [Provable](variables/Provable-1.mdx) | - |
| [ProvableType](variables/ProvableType.mdx) | - |
| [Reducer](variables/Reducer.mdx) | - |
| [TokenId](variables/TokenId.mdx) | - |
| [TransactionVersion](variables/TransactionVersion.mdx) | - |
| [TupleN](variables/TupleN.mdx) | - |
| [Undefined](variables/Undefined.mdx) | - |
| [Void](variables/Void.mdx) | - |
| [ZkappPublicInput](variables/ZkappPublicInput.mdx) | - |

## Functions

| Function | Description |
| ------ | ------ |
| [addCachedAccount](functions/addCachedAccount.mdx) | Adds an account to the local cache, indexed by a GraphQL endpoint. |
| [assert](functions/assert.mdx) | Assert that a statement is true. If the statement is false, throws an error with the given message. Can be used in provable code. |
| [Bytes](functions/Bytes.mdx) | A provable type representing an array of bytes. |
| [checkBitLength](functions/checkBitLength.mdx) | - |
| [checkZkappTransaction](functions/checkZkappTransaction.mdx) | - |
| [circuitMain](functions/circuitMain.mdx) | - |
| [conditionalSwap](functions/conditionalSwap.mdx) | - |
| [ConstantField](functions/ConstantField.mdx) | - |
| [createEcdsa](functions/createEcdsa.mdx) | Create a class [EcdsaSignature](classes/EcdsaSignature.mdx) for verifying ECDSA signatures on the given curve. |
| [createForeignCurve](functions/createForeignCurve.mdx) | Create a class representing an elliptic curve group, which is different from the native [Group](classes/Group.mdx). |
| [createForeignField](functions/createForeignField.mdx) | Create a class representing a prime order finite field, which is different from the native [Field](classes/Field.mdx). |
| [declareMethods](functions/declareMethods.mdx) | `declareMethods` can be used in place of the `@method` decorator to declare SmartContract methods along with their list of arguments. It should be placed _after_ the class declaration. Here is an example of declaring a method `update`, which takes a single argument of type `Field`: `class MyContract extends SmartContract { // ... update(x: Field) { // ... } } declareMethods(MyContract, { update: [Field] }); // `[Field]` is the list of arguments!` Note that a method of the same name must still be defined on the class, just without the decorator. |
| [declareState](functions/declareState.mdx) | `declareState` can be used in place of the `@state` decorator to declare on-chain state on a SmartContract. It should be placed _after_ the class declaration. Here is an example of declaring a state property `x` of type `Field`. `class MyContract extends SmartContract { x = State<Field>(); // ... } declareState(MyContract, { x: Field });` |
| [DynamicArray](functions/DynamicArray.mdx) | Dynamic-length array type that has a - constant maximum capacity, but - dynamic actual length |
| [fetchAccount](functions/fetchAccount.mdx) | Gets account information on the specified publicKey by performing a GraphQL query to the specified endpoint. This will call the 'GetAccountInfo' query which fetches zkapp related account information. |
| [fetchCurrentSlot](functions/fetchCurrentSlot.mdx) | Fetches the current slot number of the Mina network. |
| [fetchEvents](functions/fetchEvents.mdx) | Asynchronously fetches event data for an account from the Mina Archive Node GraphQL API. |
| [fetchLastBlock](functions/fetchLastBlock.mdx) | Fetches the last block on the Mina network. |
| [fetchTimedAccountInfo](functions/fetchTimedAccountInfo.mdx) | Fetches detailed balance information for a time-locked account. |
| [fetchTransactionDepth](functions/fetchTransactionDepth.mdx) | Fetches the depth (confirmation count) of a transaction in the blockchain. Depth represents how many blocks have been built on top of the block containing the transaction. |
| [fetchTransactionStatus](functions/fetchTransactionStatus.mdx) | Fetches the status of a transaction. |
| [genericHash](functions/genericHash.mdx) | - |
| [getBackendPreference](functions/getBackendPreference.mdx) | Retrieve the currently set backend preference. |
| [getBlindingValue](functions/getBlindingValue.mdx) | - |
| [initializeBindings](functions/initializeBindings.mdx) | Include in this file all the exports that should be part of the public API. |
| [memoizeWitness](functions/memoizeWitness.mdx) | Like Provable.witness, but memoizes the witness during transaction construction for reuse by the prover. This is needed to witness non-deterministic values. |
| [MerkleListBase](functions/MerkleListBase.mdx) | - |
| [merkleListHash](functions/merkleListHash.mdx) | - |
| [MerkleWitness](functions/MerkleWitness.mdx) | Returns a circuit-compatible Witness for a specific Tree height. |
| [method](functions/method.mdx) | A decorator to use in a zkApp to mark a method as provable. You can use inside your zkApp class as: |
| [Option](functions/Option.mdx) | Define an optional version of a provable type. |
| [provableFromClass](functions/provableFromClass.mdx) | - |
| [provablePure](functions/provablePure.mdx) | - |
| [public\_](functions/public.mdx) | - |
| [readVarMessage](functions/readVarMessage.mdx) | - |
| [sendZkapp](functions/sendZkapp.mdx) | Sends a zkApp command (transaction) to the specified GraphQL endpoint. |
| [setArchiveGraphqlEndpoint](functions/setArchiveGraphqlEndpoint.mdx) | Sets up a GraphQL endpoint to be used for fetching information from an Archive Node. |
| [setBackend](functions/setBackend.mdx) | Set the backend to use for cryptographic operations such as proving. |
| [setGraphqlEndpoint](functions/setGraphqlEndpoint.mdx) | - |
| [setGraphqlEndpoints](functions/setGraphqlEndpoints.mdx) | - |
| [setNumberOfWorkers](functions/setNumberOfWorkers.mdx) | Set the number of workers to use for parallelizing the proof generation. By default the number of workers is set to the number of physical CPU cores on your machine, but there may be some instances where you want to set the number of workers manually. Some machines may have a large number of cores, but not enough memory to support that many workers. In that case, you can set the number of workers to a lower number to avoid running out of memory. On the other hand, some machines with heterogeneous cores may benefit from setting the number of workers to a lower number to avoid contention between core types if load-link/store-conditional multithreading is used. Feel free to experiment and see what works best for your use case. Maybe you can squeeze slightly more performance out by tweaking this value :) |
| [state](functions/state.mdx) | A decorator to use within a zkapp to indicate what will be stored on-chain. For example, if you want to store a field element `some_state` in a zkapp, you can use the following in the declaration of your zkapp: |
| [State](functions/State-1.mdx) | - |
| [Struct](functions/Struct.mdx) | `Struct` lets you declare composite types for use in o1js circuits. |
| [toConstantField](functions/toConstantField.mdx) | - |
| [toFp](functions/toFp.mdx) | - |
| [toPoint](functions/toPoint.mdx) | - |
| [VarField](functions/VarField.mdx) | - |
| [verify](functions/verify.mdx) | Initializes Pickles bindings, serializes the input proof and verification key for use in OCaml, then calls into the Pickles verify function and returns the result. |
| [WithHash](functions/WithHash.mdx) | - |
| [withHashes](functions/withHashes.mdx) | - |
| [withMessage](functions/withMessage.mdx) | - |
| [ZkProgram](functions/ZkProgram.mdx) | Wraps config + provable code into a program capable of producing [Proof](classes/Proof.mdx)s. |
